[gd_scene load_steps=18 format=3 uid="uid://db3wdnwnkha23"]

[ext_resource type="Script" uid="uid://bgtrt4ft7qaep" path="res://scripts/play_menu.gd" id="1_5dorc"]
[ext_resource type="Texture2D" uid="uid://dc7w2b1on6an7" path="res://textures/close_shop.png" id="2_gs4ar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq1c5"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_s630x"]
colors = PackedColorArray(0.590441, 0.590441, 0.590441, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_enbyb"]
gradient = SubResource("Gradient_s630x")
fill_from = Vector2(0.470149, 1)
fill_to = Vector2(0.514925, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6as2b"]
texture = SubResource("GradientTexture2D_enbyb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc33v"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gs4ar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mbic"]
bg_color = Color(0.368627, 0.470588, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkroi"]
bg_color = Color(0.368627, 0.470588, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70cus"]
bg_color = Color(0.368627, 0.470588, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="Theme" id="Theme_fq1c5"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/styles/focus = SubResource("StyleBoxEmpty_gs4ar")
Button/styles/hover = SubResource("StyleBoxFlat_4mbic")
Button/styles/normal = SubResource("StyleBoxFlat_hkroi")
Button/styles/pressed = SubResource("StyleBoxFlat_70cus")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs4ar"]
bg_color = Color(0.048, 0.0672, 0.08, 0.541176)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="Theme" id="Theme_4mbic"]
Label/styles/normal = SubResource("StyleBoxFlat_gs4ar")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dorc"]
bg_color = Color(0.368627, 0.470588, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pc33v"]

[sub_resource type="LabelSettings" id="LabelSettings_pc33v"]
font_size = 56

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 6.0
offset_right = -13.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5dorc")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -224.0
offset_right = 187.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fq1c5")

[node name="Panel" type="Panel" parent="PanelContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6as2b")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -224.0
offset_right = 187.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pc33v")

[node name="UpgradeButton" type="Button" parent="PanelContainer"]
texture_filter = 1
layout_mode = 2
offset_left = 35.0
offset_top = 271.0
offset_right = 360.0
offset_bottom = 355.0
theme = SubResource("Theme_fq1c5")
text = "Улучшить шахту
(1 Уровень) -> (2 уровень)"

[node name="PlayButton" type="Button" parent="PanelContainer"]
texture_filter = 1
layout_mode = 2
offset_left = 35.0
offset_top = 67.0
offset_right = 360.0
offset_bottom = 151.0
theme = SubResource("Theme_fq1c5")
text = "ОТПРАВИТЬСЯ
В ШАХТУ"

[node name="RequiredLevel" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_left = 110.0
offset_top = 221.0
offset_right = 277.0
offset_bottom = 274.0
theme = SubResource("Theme_4mbic")
text = "Текущий уровень: 1
Требуется монет: 50"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_top = -77.0
offset_right = 194.0
offset_bottom = 10.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5dorc")

[node name="Text" type="PanelContainer" parent="PanelContainer/PanelContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_pc33v")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/Text"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "ШАХТА"
label_settings = SubResource("LabelSettings_pc33v")

[node name="CloseButton" type="TextureButton" parent="PanelContainer"]
texture_filter = 1
layout_mode = 0
offset_left = 349.0
offset_top = -77.0
offset_right = 396.0
offset_bottom = -34.0
texture_normal = ExtResource("2_gs4ar")
stretch_mode = 0

[connection signal="pressed" from="PanelContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="PanelContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
